Refactor gitignore and Dockerfile, and update composer.json and docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,7 +59,5 @@ networks:
   energy:
     driver: bridge
 
-#volumes:
-#  logs-folder:
-#    name: ${log_rabbitmq_management}
-#    driver: local
+volumes:
+  dbdata:
