--- a/.env.dist
+++ b/.env.dist
@@ -43,5 +43,6 @@ MAIL_FROM_NAME="energy"
 
 QUEUE_FAILED_DRIVER=database-uuids
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+OPENAI_API_KEY=""
+OPENAI_MODEL="gpt-4o-mini"
+AI_FILTER="energy"
