--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,21 @@
       "tests/"
     ]
   },
+	"scripts": {
+		"post-autoload-dump": [
+				"Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+				"@php artisan package:discover --ansi"
+		],
+		"post-update-cmd": [
+				"@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+		],
+		"post-root-package-install": [
+				"@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+		],
+		"post-create-project-cmd": [
+				"@php artisan key:generate --ansi"
+		]
+},
   "config": {
     "preferred-install": "dist",
     "sort-packages": true,
@@ -57,10 +72,5 @@
     }
   },
   "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-    ]
-  }
+  "prefer-stable": true
 }
