--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/material": "^6.1.6",
+    "js-cookie": "^3.0.5",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0"
   }
